made nav bar change and meta tag of image change also fixed overlapping of image on service page

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -15,8 +15,6 @@
     color: #edf5e1;
     letter-spacing: 0.03rem;
     background-image: black;
-    
-    
   }
   
   .footer {
@@ -114,35 +112,27 @@
   .nav {
     padding: none;
     overflow: hidden;
+    background-color: black;
+
   }
 
   .hamburger{
     display: contents;
-    z-index: 11;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-  }
-
-  .hammy {
-    top: 0;
-    right: 0;
   }
 
   .mobile-nav{
     position: sticky;
-    text-align: right;
     background-color: inherit;
     height: 22vh;
     margin-top: 60px;
     animation: downDrop 0.3s linear;
     padding: 0 0 0 0;
+    background-color: black;
   }
 
   .mobile-nav li{
-    text-align: right;
-    list-style-type: none;
-    width: 200px;
+    list-style-type: disclosure-open;
+    /* width: 200px; */
     padding-top: 15px;
     border-style: solid;
     font-size: 18px;
